block scope variables

--- a/FunctionsThis/func.html
+++ b/FunctionsThis/func.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="funcThisExp.js"></script>
+    <script src="blockScopr.js"></script>
 </body>
 </html>
