js content added

--- a/AddEventListener/index1.html
+++ b/AddEventListener/index1.html
@@ -11,6 +11,6 @@
   <body>
     <h1>Welcome!</h1>
     <button>click me</button>
-    <script src="4-project.js" async defer></script>
+    <script src="file1.js" async defer></script>
   </body>
 </html>
