--- a/AddEventListener/this.html
+++ b/AddEventListener/this.html
@@ -67,7 +67,7 @@
     <h1>Click Me!</h1>
     <h1>Click Me!</h1>
 
-    <script src="5-domthis.js"></script>
+    <script src="this.js"></script>
 </body>
 
 </html>
