--- a/AddEventListener/evet.html
+++ b/AddEventListener/evet.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <title>event objects</title>
-    <link rel="stylesheet" href="./6-event.css" />
+    <link rel="stylesheet" href="evet.css" />
   </head>
   <body>
     <button>Click</button>
     <div class="test"></div>
     <input type="text" />
-    <script src="6-event.js" async defer></script>
+    <script src="evet.js" async defer></script>
   </body>
 </html>
