--- a/AddEventListener/form.html
+++ b/AddEventListener/form.html
@@ -30,6 +30,6 @@
     <h2>Tweets:</h2>
     <ul id="tweets"></ul>
 
-    <script src="7-form.js"></script>
+    <script src="form.js"></script>
   </body>
 </html>
