--- a/paint-JS/index.html
+++ b/paint-JS/index.html
@@ -8,6 +8,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <h1>Welcome to painting</h1>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+        <p>this is a paractice of js - creating a website for painting</p>
+    </footer>
     <script src="script.js"></script>   
 </body>
 </html>
