--- a/paint-JS/index.html
+++ b/paint-JS/index.html
@@ -12,7 +12,11 @@
         <h1>Welcome to painting</h1>
     </header>
     <main>
-
+        <div class="container">
+            <div class="white-board">
+                
+            </div>
+        </div>
     </main>
     <footer>
         <p>this is a paractice of js - creating a website for painting</p>
