palet container added

--- a/paint-JS/index.html
+++ b/paint-JS/index.html
@@ -6,6 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>paint</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        .beard {
+              	background: black;
+         		width: 5px;
+         		height: 5px;
+         		position: absolute;
+         		border-radius: 2px;
+         		top: 80px;
+         		left: 15px;
+         	}
+        </style>
 </head>
 <body>
     <header>
@@ -13,8 +24,11 @@
     </header>
     <main>
         <div class="container">
+            <div class="palet">
+
+            </div>
             <div class="white-board">
-                
+
             </div>
         </div>
     </main>
