--- a/paint-JS/index.html
+++ b/paint-JS/index.html
@@ -25,7 +25,11 @@
     <main>
         <div class="container">
             <div class="palet">
-
+                <div class="red"></div>
+                <div class="blue"></div>
+                <div class="green"></div>
+                <div class="white"></div>
+                <div class="black"></div>
             </div>
             <div class="white-board">
 
