--- a/paint-JS/index.html
+++ b/paint-JS/index.html
@@ -25,11 +25,12 @@
     <main>
         <div class="container">
             <div class="palet">
-                <div class="red"></div>
+                <!-- <div class="red"></div>
                 <div class="blue"></div>
                 <div class="green"></div>
                 <div class="white"></div>
-                <div class="black"></div>
+                <div class="black"></div> -->
+                <button class="reset-color">reset colors</button>
             </div>
             <div class="white-board">
 
