border radius added

--- a/paint-JS/index.html
+++ b/paint-JS/index.html
@@ -38,7 +38,7 @@
         </div>
     </main>
     <footer>
-        <p>this is a paractice of js - creating a website for painting</p>
+        <p>this is a practice of js - creating a website for painting</p>
     </footer>
     <script src="script.js"></script>   
 </body>
