--- a/paint-JS/index.html
+++ b/paint-JS/index.html
@@ -25,12 +25,13 @@
     <main>
         <div class="container">
             <div class="palet">
+                <button class="reset-board">reset board</button>
+                <button class="reset-color">reset colors</button>
                 <!-- <div class="red"></div>
                 <div class="blue"></div>
                 <div class="green"></div>
                 <div class="white"></div>
                 <div class="black"></div> -->
-                <button class="reset-color">reset colors</button>
             </div>
             <div class="white-board">
 
