background board added

--- a/paint-JS/index.html
+++ b/paint-JS/index.html
@@ -26,6 +26,7 @@
         <div class="container">
             <div class="palet">
                 <button class="reset-board">reset board</button>
+                <button class="background-board">background board</button>
                 <button class="reset-color">reset colors</button>
                 <!-- <div class="red"></div>
                 <div class="blue"></div>
