--- a/paint-JS/index.html
+++ b/paint-JS/index.html
@@ -40,7 +40,7 @@
         </div>
     </main>
     <footer>
-        <p>this is a practice of js - creating a website for painting</p>
+        <p>this is a practice of js - creating a website for painting - Amir Shahsahebi</p>
     </footer>
     <script src="script.js"></script>   
 </body>
