--- a/paint-JS/index.html
+++ b/paint-JS/index.html
@@ -23,6 +23,9 @@
         <h1>Welcome to painting</h1>
     </header>
     <main>
+        <span class="pen1">5px</span>
+        <span class="pen2">10px</span>
+        <span class="pen3">15px</span>
         <div class="container">
             <div class="palet">
                 <button class="reset-board">reset board</button>
