--- a/time/time.html
+++ b/time/time.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
+    <div style="clock"></div>
     <script src="time.js"></script>
+    <script src="digitalClock.js"></script>
 </body>
 </html>
