digital clock completed

--- a/time/time.html
+++ b/time/time.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div style="clock"></div>
+    <div class="clock"> </div>
     <script src="time.js"></script>
     <script src="digitalClock.js"></script>
 </body>
