--- a/time/time.html
+++ b/time/time.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <div class="clock"> </div>
-    <script src="time.js"></script>
+    <!-- <script src="time.js"></script> -->
     <script src="digitalClock.js"></script>
+    <script src="http://cdn.date-fns.org/v1.9.0/date_fns.min.js"></script>
+    <script src="dateFncCdn.js"></script>
 </body>
 </html>
