--- a/nodeModule/index.html
+++ b/nodeModule/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     
-    <script src="script.js"></script>
+    <script  src="script.js"></script>
+    <!-- <script type="module" src="script2.js"></script> -->
 </body>
 </html>
