--- a/test.html
+++ b/test.html
@@ -4,13 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
     <title>Document</title>
-    <!-- <type>module</type> -->
 </head>
 <body>
     
-    <script src="script.js" type="module"></script>
-    <!-- <script type="module" src="script2.js"></script> -->
 </body>
+<script src="nodeModule/script.js" type="module"></script>
 </html>
